--- a/strings/command.yml
+++ b/strings/command.yml
@@ -1,46 +1,39 @@
+# Bot Komutları
 
-# Copyright (C) 2021-2022 by TeamYukki@Github, < https://github.com/TeamYukki >.
-#
-# This file is part of < https://github.com/TeamYukki/YukkiMusicBot > project,
-# and is released under the "GNU v3.0 License Agreement".
-# Please see < https://github.com/TeamYukki/YukkiMusicBot/blob/master/LICENSE >
-#
-# All rights reserved.
-
-
-# Commands in Every Language
-
-# Bot Commands
 PING_COMMAND : ["ping"]
 START_COMMAND : ["start"]
 HELP_COMMAND : ["help", "yardim", "yardım"]
 SETTINGS_COMMAND : ["settings", "setting", "ayarlar", "ayar"]
 RELOAD_COMMAND : ["admincache", "reload"]
-GSTATS_COMMAND : ["jsjdjejelgwvcwp7t2gjeosısyywjwowhe77"]
-STATS_COMMAND : ["stats", "stat"]
-LANGUAGE_COMMAND : ["ertjhtte", "etjhete", "rteejht", "rtjjrt"]
+GSTATS_COMMAND : ["gstatssss"]
+STATS_COMMAND : ["statssss", "statsssss"]
+LANGUAGE_COMMAND : ["lang", "langs"]
 
-# Play Commands
-PLAY_COMMAND : ["play", "vplay", "cplay", "cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce", "oynat", "o", "pl"]
-PLAYMODE_COMMAND : ["playmode"]
-CHANNELPLAY_COMMAND : ["channelplay"]
+# Play Komutları
+
+PLAY_COMMAND : ["play", "vplay", "cplay", "cvplay", "voynat", "playforce", "vplayforce", "cplayforce", "hemenoynat", "cvplayforce", "oynat", "o", "pl"]
+PLAYMODE_COMMAND : ["playmode", "oynatmod"]
+CHANNELPLAY_COMMAND : ["channelplay", "koynat", "kanaloynat", "cplay"]
 STREAM_COMMAND : ["stadsfream", "cstfewream", "strfewaeamforce"]
 
-#Playlists Command
+#Playlist Komutları
+
 PLAYLIST_COMMAND : ["playlist"]
 DELETEPLAYLIST_COMMAND : ["deleteplaylist", "listemisil"]
 
 
-# Tools
+# Queue Komutları
+
 QUEUE_COMMAND : ["queue","cqueue", "player", "cplayer", "playing", "cplaying", "sira"]
-SONG_COMMAND : ["bul", "song", "indir", "gmsşggl", "jgkerjgprej"]
+SONG_COMMAND : ["bul", "song", "indir"]
 LYRICS_COMMAND : ["lyrics", "sarkisozu", "sarkısözü", "sarkisözü"]
 
 
-# Admin Commands
+# Admin Komutları
+
 AUTH_COMMAND : ["auth", "yetkilendir"]
-UNAUTH_COMMAND : ["unauth"]
-AUTHUSERS_COMMAND : ["authusers"]
+UNAUTH_COMMAND : ["unauth", "yetkial"]
+AUTHUSERS_COMMAND : ["authusers", "yetkililer"]
 PAUSE_COMMAND : ["pause", "cpause", "duraklat"]
 RESUME_COMMAND : ["resume", "cresume", "devam"]
 MUTE_COMMAND : ["muafgte", "cmuwfaete"]
@@ -50,63 +43,72 @@ SKIP_COMMAND : ["skip", "cskip", "atla", "a"]
 SHUFFLE_COMMAND : ["karistir", "cshuffle", "karıştır"]
 LOOP_COMMAND : ["loop", "cloop", "dongu", "döngü", "tekrar"]
 SEEK_COMMAND : ["ilerisar", "cseek", "gerisar", "seekback", "cseekback"]
-RESTART_COMMAND : ["restart"]
+RESTART_COMMAND : ["restart", "rr"]
 
-# Sudo Users Commaands
 
-# Sudo Command
+# Sudo Komutları
+
 ADDSUDO_COMMAND : ["addsudo"]
 DELSUDO_COMMAND : ["delsudo"]
-SUDOUSERS_COMMAND : ["sudolistt"]
+SUDOUSERS_COMMAND : ["sudolist"]
 
-#Broadcast 
-BROADCAST_COMMAND : ["broadcast"]
+# Reklam Komutları
 
-#Blacklist chat
-BLACKLISTCHAT_COMMAND : ["blacklistchat", "engelle"]
-WHITELISTCHAT_COMMAND : ["whitelistchat"]
+BROADCAST_COMMAND : ["broadcast", "reklam", "duyuru"]
+
+#Ban Komutları
+
+BLACKLISTCHAT_COMMAND : ["blacklistchat", "grupengelle"]
+WHITELISTCHAT_COMMAND : ["whitelistchat", "grupengelkaldır"]
 BLACKLISTEDCHAT_COMMAND : ["blacklistedchat", "engelliler"]
 
-# Video Calls Command
+# Video Komutları
+
 VIDEOLIMIT_COMMAND : ["set_video_limit", "videolimit"]
 VIDEOMODE_COMMAND : ["videomode"]
 
-#Mantenance
-MAINTENANCE_COMMAND : ["maintenance"]
+#Bakım Komutları
+
+MAINTENANCE_COMMAND : ["maintenance", "bakim"]
 LOGGER_COMMAND : ["logger"]
 
 #Heroku
+
 GETLOG_COMMAND : ["get_log"]
 GETVAR_COMMAND : ["geetfew_efwvar"]
 DELVAR_COMMAND : ["defwel_var"]
 SETVAR_COMMAND : ["sefwet_var"]
 USAGE_COMMAND : ["usafwage"]
-VARS_COMMAND : ["vafawrs", "config"]
+VARS_COMMAND : ["vafawrs", "cfg"]
 
 
-#Basic Bot Commands
-UPDATE_COMMAND : ["update"]
-REBOOT_COMMAND : ["reboot"]
+#Basic Bot Komutları
+
+UPDATE_COMMAND : ["update", "güncelle"]
+REBOOT_COMMAND : ["reboot", "yenidenbaslat"]
 AUTOEND_COMMAND : ["autoend"]
 
-#Private Bot Mode
+#Pro Komutları
 AUTHORIZE_COMMAND : ["pro"]
 UNAUTHORIZE_COMMAND : ["unpro"]
 AUTHORIZED_COMMAND : ["prolar"]
 
-#Block Users Command
+# Engelleyici Komutları
 BLOCK_COMMAND : ["block"]
 UNBLOCK_COMMAND : ["unblock"]
 BLOCKED_COMMAND : ["blockedusers"]
 
-#sPEEDTEST
+#Hız Testi Komutları
+
 SPEEDTEST_COMMAND : ["speedtest", "spd", "speed"]
 
-#Voice chat commands
+# Sesli Sohbet Komutları
+
 ACTIVEVC_COMMAND : ["activevoice", "aktifses"]
 ACTIVEVIDEO_COMMAND : ["activevideo", "aktifvideo"]
 
-#Gban Commands
+#Global Komutları
+
 GBAN_COMMAND : ["gban"]
 UNGBAN_COMMAND : ["ungban"]
 GBANNED_COMMAND : ["gbannedusers"]
