--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
 API_ID=28374388 # get this value from my.telegram.org
 API_HASH=c9a8ea0d3e63c97afdecf913172a2bc3 # get this value from my.telegram.org
 BOT_TOKEN=7480785599:AAFmQk0CvBo1WPQe5_wVoS5-KrC-Mp15VL4 # get this value from @Botfather
-MONGO_DB_URI=mongodb+srv://rythim:Bh7KVotKtq31I1aS@rythimusic.zrjhhre.mongodb.net # get this value from mongodb.com
+MONGO_DB_URI=mongodb+srv://lostmuzik:VPfM0SnpZENf9A1Y@lost.yhgdp.mongodb.net/?retryWrites=true&w=majority # get this value from mongodb.com
 LOG_GROUP_ID=-1002202401772 # get this value from in your log group 
 MUSIC_BOT_NAME=Lost Muzik # your music bot name 
 GIT_TOKEN=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 
