--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pillow
 psutil
 pykeyboard
 py-tgcalls==0.9.7
+httpx==0.27.0
 git+https://github.com/KurimuzonAkuma/pyrogram@dev
 python-dotenv
 pyyaml
