--- a/strings/command.yml
+++ b/strings/command.yml
@@ -2,7 +2,7 @@
 
 PING_COMMAND : ["ping"]
 ID_COMMAND : ["id"]
-HAVA_COMMAND : ["hava"]
+WEATHER_COMMAND : ["hava"]
 START_COMMAND : ["start"]
 HELP_COMMAND : ["help", "yardim", "yardım"]
 SETTINGS_COMMAND : ["settings", "setting", "ayarlar", "ayar"]
