--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,30 @@
-numpy
 aiofiles
-aiohttp
 asyncio
+aiohttp
+beautifulsoup4
 dnspython
 ffmpeg-python
+Flask
 gitpython
+gunicorn
 hachoir
-httpx
 heroku3
+httpx[http2]
 lyricsgenius
 motor
+ntgcalls~=1.3.3
 pillow
 psutil
+py-tgcalls
 pykeyboard
-py-tgcalls==0.9.7
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
+Kurigram
 python-dotenv
-pyyaml
 requests
 speedtest-cli
 spotipy
-tgcrypto
-youtube-search
-youtube-search-python
+TgCrypto
+unidecode
+werkzeug
 yt-dlp
-gTTS
-googletrans==4.0.0rc1
+https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
+pyyaml
