--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-heroku3
 aiofiles
+pyrogram==2.0.106
 asyncio
 aiohttp
 beautifulsoup4
-dnspython
+dnspython==2.3.0
 ffmpeg-python
 Flask
 gitpython
@@ -23,9 +23,9 @@ python-dotenv
 requests
 speedtest-cli
 spotipy
-TgCrypto
+PyTgCrypto
 unidecode
 werkzeug
-yt-dlp
+yt-dlp~=2025.3.31
 https://github.com/KSKOP69/youtube-search-python/archive/ksk.zip
 pyyaml
